# pg2-project

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  config.yaml
Assets/Shaders/Basic/: fragment.glsl  vertex.glsl
Assets/Shaders/DirectPBR/: abd.glsl  fragment.glsl  vertex.glsl
Assets/Shaders/IBL/BRDF/: fragment.glsl  vertex.glsl
Assets/Shaders/IBL/EquirectangularToCubeMap/: fragment.glsl
Assets/Shaders/IBL/IrradianceConvolution/: fragment.glsl
Assets/Shaders/IBL/Prefilter/: fragment.glsl  vertex.glsl
Assets/Shaders/Normal/: fragment.glsl  vertex.glsl
Assets/Shaders/PBR/Background/: fragment.glsl
Assets/Shaders/PBR/Background/BackgroundDiffuse/: fragment.glsl  vertex.glsl
Assets/Shaders/PBR/DiffusePBR/: fragment.glsl  vertex.glsl
Assets/Shaders/PBR/DirectPBR/: fragment.glsl
Assets/Shaders/PBR/FullPBR/: fragment.glsl
Assets/Shaders/ShadowMapping/: fragment.glsl  geometry.glsl  vertex.glsl
Include/: Config.h  Logger.h
Include/Application/: Application.h  Logger.h  Window.h
Include/Assets/: AssetManager.h  AssetRegistry.h  GLImage.h  MaterialRegistry.h  MeshManager.h  MeshRegistry.h  ShaderManager.h  ShaderRegistry.h  TextureFactory.h  TextureRegistry.h
Include/Core/: Application.h  Time.h  Window.h
Include/ECS/: Entity.h
Include/ECS/Behaviors/: Behavior.h  CameraController.h
Include/ECS/Components/: Camera.h  CameraData.h  Geometry.h  Material.h  Mesh.h  PointLight.h  Script.h  Transform.h
Include/EventSystem/: EventDispatcher.h  GLFWCallbacks.h
Include/EventSystem/Events/: CursorPositionEvent.h  Event.h  FrameBufferSizeEvent.h  KeyEvent.h  MouseButtonEvent.h
Include/Events/: InputHandler.h
Include/Project/: Project.h  ProjectConfig.h
Include/Renderer/: DrawContext.h  IndexBuffer.h  MaterialAsset.h  Mesh.h  MeshHandle.h  RenderContext.h  Renderer.h  Shader.h  ShaderProgram.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
Include/Renderer/Buffers/: FrameBuffer.h  RenderBuffer.h  ShaderStorageBuffer.h
Include/Renderer/Buffers/Mesh/: IndexBuffer.h  MeshHandle.h  VertexArray.h  VertexBufferLayout.h
Include/Renderer/Material/: MaterialAsset.h  Texture.h
Include/Renderer/Material/Shaders/: Shader.h  ShaderPipeline.h  ShaderProgram.h
Include/Renderer/Material/Shaders/Binders/: DiffusePBRBinder.h  DirectPBRBinder.h  FullPBRBinder.h  NormalBinder.h  ShaderBinder.h
Include/Scene/: Scene.h  SceneLoader.h
Include/Systems/: AISystem.h  RenderSystem.h
Include/Utils/: Text.h
Source/: CMakeLists.txt  Logger.cpp  Main.cpp
Source/Application/: Application.cpp  Logger.cpp  Window.cpp
Source/Assets/: AssetManager.cpp  GLImage.cpp  MaterialRegistry.cpp  MeshManager.cpp  MeshRegistry.cpp  ShaderManager.cpp  ShaderRegistry.cpp  TextureFactory.cpp  TextureRegistry.cpp
Source/Core/: Application.cpp  Logger.cpp  Window.cpp
Source/ECS/Behaviors/: CameraController.cpp
Source/EventSystem/: EventDispatcher.cpp  GLFWCallbacks.cpp
Source/Events/: InputHandler.cpp
Source/Renderer/: IndexBuffer.cpp  Renderer.cpp  Shader.cpp  ShaderProgram.cpp  ShaderStorageBuffer.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
Source/Renderer/Buffers/: FrameBuffer.cpp  RenderBuffer.cpp  ShaderStorageBuffer.cpp
Source/Renderer/Buffers/Mesh/: IndexBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp
Source/Renderer/Material/: Texture.cpp
Source/Renderer/Material/Shaders/: Shader.cpp  ShaderProgram.cpp
Source/Scene/: Scene.cpp  SceneLoader.cpp
Source/Systems/: AISystem.cpp  RenderSystem.cpp
